
Bug Fixes: 
- Removed unneded debug outputs (checking for <team> with the result true/false)

4.1.4: 

IMPORTANT NOTE: After updating set `rebuildLookups` to true in config.yml and fully restart your server.
This is due a couple of bugs causing desynchronization between the lookup tables and the stored values.

Bug Fixes:
- Fixed chest claims so it is functional (#236)
- Fixed error message with holograms (#239)

4.2.0
Features: 
- Added placeholders `%betterteams_members_<team>%` and `%betterteams_members_<team>_online%` (#249)
- Added German support (#256)
Bug Fixes:
- Fixed contradictory comments (#253)

4.2.1:

This update comes with the help of srnyx (https://github.com/srnyx) and bobby29831 (https://github.com/bobby29831)

Features:
- Added /teama teleport <team> [x] [y] [z] [pitch] [yaw] to teleport a team to the specified location (#242)

Improvements: 
- Added toggle for the update checker (#260)

Bug Fixes:
- Improved comments in the config (265)

4.3.0:

Features: 
- Added SQL support for storage (#255)

Improvements
- Added a teleport to player option in /teama teleport (#269)
- Improved the output of /teama version to include more information (#296)
- Added placeholder %betterteams_inteam% to identify if a player is in a team (#290) 
- Added consistency on prefixing ally chat and team chat (#268)
- Added some missing Traditional Chinese messages (credit: 花圃中的人偶)

Bug Fixes: 
- Fixed bug with players getting kicked out of teams when running /teama create (#292)
- Fixed case sensitivity issues with player names (#288)
- Fixed bug causing NoSuchMethod error with "@" in commands (#287)
- Fixed bug causing rebuildLookups to not work as expected (#286)
- Fixed bug and documentation with autoPurge (#285)
- Fixed typo in Polish Translations (credit: Duplon)
- Fixed typo in config.yml (credit: SecretAgent002)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
